@@ -1,5 +1,9 @@
 $Id$
 
+2015-09-23 Alex Samorukov <samm@os2.kiev.ua>
+
+	drivedb.h: Innostor USB3.0 to SATAIII bridge (#611)
+
 2015-09-21 Alex Samorukov <samm@os2.kiev.ua>
 
 	drivedb.h: decode 188 attribute for the "Seagate Enterprise Capacity
